--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -201,9 +201,6 @@ nav {
     font-size: 25px;
     color: #fff; }
 
-.trasfondo__servicios {
-  margin-left: 150px; }
-
 .trasfondo__textos button {
   font-family: "Raleway", sans-serif;
   padding: 10px;
@@ -317,9 +314,7 @@ footer .footer__p {
     border: 0; }
   .imagen-contacto .imagen-contacto__color-contacto {
     position: absolute;
-    color: rgba(0, 0, 0, 0.315);
-    width: 100%;
-    height: 100%; }
+    color: rgba(0, 0, 0, 0.315); }
   .imagen-contacto h2 {
     font-family: 'Raleway', sans-serif; }
 
