--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -30,80 +30,51 @@ nav {
       background-color: #000;
       transition: 100ms; }
 
-.fondo-portada {
-  height: 550px;
-  width: 100%;
-  position: relative;
-  background-image: url("../assets/img/1535729470-portada-computacin-1200x519.jpeg");
-  background-size: 100%;
+.portada {
+  background-image: url(../assets/img/1535729470-portada-computacin-1200x519.jpeg);
   background-repeat: no-repeat;
-  animation: movimiento 20s infinite linear alternate; }
-  .fondo-portada .fondo-portada__gradient {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    opacity: 0.5; }
-  .fondo-portada .fondo-portada__detalles {
-    width: 100%;
-    max-width: 1200px;
+  background-size: cover;
+  width: 100%;
+  height: 750px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative; }
+  .portada h1, .portada h2, .portada p, .portada button {
+    color: #fff;
     position: relative;
-    margin: auto; }
-    .fondo-portada .fondo-portada__detalles .fondo-portada__textos-detalles {
-      font-family: 'Raleway', sans-serif;
-      width: 100%;
-      max-width: 600px;
-      padding-top: 100px;
-      position: relative;
-      color: #fff; }
-      .fondo-portada .fondo-portada__detalles .fondo-portada__textos-detalles h3 {
-        font-size: 50px;
-        width: 550px;
-        font-weight: bold; }
-      .fondo-portada .fondo-portada__detalles .fondo-portada__textos-detalles p {
-        font-size: 30px; }
-      .fondo-portada .fondo-portada__detalles .fondo-portada__textos-detalles button {
-        font-family: 'Raleway', sans-serif;
-        padding: 10px;
-        background: none;
-        border-style: none;
-        border: 1px solid #fff;
-        color: #fff;
-        margin-top: 10px;
-        transition: 500ms; }
-      .fondo-portada .fondo-portada__detalles .fondo-portada__textos-detalles .textos-detalles__a {
-        text-decoration: none;
-        border-style: none;
-        background: none;
-        font-weight: bold;
-        color: #fff; }
-      .fondo-portada .fondo-portada__detalles .fondo-portada__textos-detalles .boton2 {
-        font-family: 'Raleway', sans-serif;
-        padding: 10px;
-        background: none;
-        border-style: none;
-        border: 1px solid #fff;
-        color: #fff;
-        margin-top: 10px;
-        transition: 500ms; }
-      .fondo-portada .fondo-portada__detalles .fondo-portada__textos-detalles button:hover {
-        background-color: #000;
-        cursor: pointer; }
-      .fondo-portada .fondo-portada__detalles .fondo-portada__textos-detalles .boton2:hover {
-        background-color: #000;
-        cursor: pointer; }
+    font-family: Verdana, Geneva, Tahoma, sans-serif; }
+  .portada h2 {
+    width: 70%;
+    font-family: 'Raleway', sans-serif; }
+  .portada h1 {
+    padding-bottom: 30px;
+    width: 70%; }
+  .portada .portada__botones {
+    width: 50%; }
+  .portada button {
+    color: #fff;
+    border-radius: 10px;
+    text-decoration: none;
+    background: none;
+    border: solid 1px black;
+    padding: 8px;
+    margin-top: 15px;
+    transition: all 0.5s; }
+  .portada button:hover {
+    background-color: #000;
+    color: #fff; }
+  .portada .fondo__botones {
+    width: 100%; }
 
-@keyframes movimiento {
-  from {
-    background-position: bottom left; }
-  to {
-    background-position: top right; } }
-
-@media (max-width: 1288px) and (min-width: 576px) {
-  .imagen_entre_texto {
-    height: 100%; } }
-
-.boton2 {
-  margin-left: 20px; }
+.portada::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #2e2e15;
+  opacity: 0.7;
+  position: absolute; }
 
 .section-2 {
   background-color: #69d5ff;
