--- a/scss/_fondoportada.scss
+++ b/scss/_fondoportada.scss
@@ -9,108 +9,72 @@ $color-negro: #000;
 }
 
 
-
-
-.fondo-portada{
-    @include size(100%, 550px);
-    position: relative;
-    background-image: url('../assets/img/1535729470-portada-computacin-1200x519.jpeg');
-    background-size: 100%;
+.portada{
+    background-image: url(../assets/img/1535729470-portada-computacin-1200x519.jpeg);
     background-repeat: no-repeat;
-    animation: movimiento 20s infinite linear alternate;
+    background-size: cover;
+    width: 100%;
+    height: 750px;
 
-    .fondo-portada__gradient{
-        @include size(100%, 100%);
-        position: absolute;
-        opacity: 0.5;
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
-    .fondo-portada__detalles{
-        width: 100%;
-        max-width: 1200px;
+    position: relative;
+
+
+    h1, h2, p, button{
+        color: #fff;
         position: relative;
-        margin:auto;
-
-        .fondo-portada__textos-detalles{
-            font-family: 'Raleway', sans-serif;
-            width: 100%;
-            max-width: 600px;
-            padding-top: 100px;
-            position: relative;
-            color: $color-blanco;
-            h3{
-                font-size: 50px;
-                width: 550px;
-                font-weight: bold;
-            }
-            p{
-                font-size: 30px;
-            }
-
-            button{
-                font-family: 'Raleway', sans-serif;
-                padding: 10px;
-                background: none;
-                border-style: none;
-                border: 1px solid $color-blanco;
-                color: $color-blanco;
-                margin-top: 10px;
-                transition: 500ms;
-            }
-
-            .textos-detalles__a{
-                text-decoration: none;
-                border-style: none;
-                background: none;
-                font-weight: bold;
-                color: $color-blanco;
-            }
-
-            .boton2{
-                font-family: 'Raleway', sans-serif;
-                padding: 10px;
-                background: none;
-                border-style: none;
-                border: 1px solid $color-blanco;
-                color: $color-blanco;
-                margin-top: 10px;
-                transition: 500ms;
-            }
-
-            button:hover{
-                background-color: $color-negro;
-                cursor: pointer;
-            }
-
-            .boton2:hover{
-                background-color: $color-negro;
-                cursor: pointer;
-            }
-
-        }
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
-    
-}
 
-
-@keyframes movimiento{
-    from{
-        background-position: bottom left;
-
+    h2{
+        width: 70%;
+        font-family: 'Raleway', sans-serif;
     }
-    to{
-            background-position: top right;
-        }
-}
 
-@media (max-width:1288px) and (min-width:576px){
-
-    .imagen_entre_texto{
-        height:100%;
+    h1{
+        padding-bottom: 30px;
+        width: 70%;
     }
-}
+
+    .portada__botones{
+        width:50%;
+    }
+
+    button{
+        color: $color-blanco;
+        border-radius: 10px;
+        text-decoration: none;
+        background: none;
+        border: solid 1px black;
+        padding: 8px;
+        margin-top: 15px;
+        transition: all 0.5s;
+        
+    }
+
+    button:hover{
+        background-color: $color-negro;
+        color: $color-blanco;
+    }
+
+    .fondo__botones{
+        width: 100%;
+    }
 
 
-.boton2{
-    margin-left: 20px;
 }
+
+.portada::before{
+
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: rgb(46, 46, 21);
+    opacity: 0.7;
+    position: absolute;
+}
+
