Correccion responsive en imagenes del index y del textarea de contacto

--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -8,7 +8,7 @@
 }
 
 .imagen_entre_texto{
-    width: 350px;
+    width: 70%;
 }
 
 .texto-entre-imagen{
@@ -19,7 +19,7 @@
 }
 
 .img-programing{
-    width: 500px;
+    width: 80%;
 }
 
 .texto3{
