--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -81,7 +81,7 @@ nav {
   padding-bottom: 150px; }
 
 .imagen_entre_texto {
-  width: 350px; }
+  width: 70%; }
 
 .texto-entre-imagen {
   line-height: 30px;
@@ -90,7 +90,7 @@ nav {
   font-weight: 100; }
 
 .img-programing {
-  width: 500px; }
+  width: 80%; }
 
 .texto3 {
   line-height: 30px;
@@ -295,7 +295,8 @@ footer .footer__p {
   font-family: 'Raleway', sans-serif; }
 
 textarea {
-  border-radius: 10px; }
+  border-radius: 10px;
+  width: 80%; }
 
 .boton-enviar {
   border-radius: 10px;
