Responsive en las secciones

--- a/scss/_fondoportada.scss
+++ b/scss/_fondoportada.scss
@@ -38,6 +38,7 @@ $color-negro: #000;
     h1{
         padding-bottom: 30px;
         width: 70%;
+        font-size: 35px;
     }
 
     .portada__botones{
