--- a/scss/prueba.scss
+++ b/scss/prueba.scss
@@ -29,10 +29,15 @@
     font-weight:100;
 }
 
+.text-info{
+    font-size: 40px;
+}
+
 
 .carousel-inner {
     img{
         border-radius:10px;
+        width: 100%;
     }
 }
 
