--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -5,7 +5,7 @@ nav {
     background-color: #001f6c;
     color: #fff;
     font-family: "Verdana", Geneva, Tahoma, sans-serif;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: bold;
     border: 1px solid;
     border-radius: 30px;
@@ -50,7 +50,8 @@ nav {
     font-family: 'Raleway', sans-serif; }
   .portada h1 {
     padding-bottom: 30px;
-    width: 70%; }
+    width: 70%;
+    font-size: 35px; }
   .portada .portada__botones {
     width: 50%; }
   .portada button {
@@ -98,8 +99,12 @@ nav {
   font-family: 'Raleway', sans-serif;
   font-weight: 100; }
 
+.text-info {
+  font-size: 40px; }
+
 .carousel-inner img {
-  border-radius: 10px; }
+  border-radius: 10px;
+  width: 100%; }
 
 .imagen-contacto-index {
   background: url("../assets/img/pexels-dana-tentis-370799.jpg") no-repeat fixed;
@@ -147,7 +152,7 @@ nav {
   font-weight: 100; }
 
 .img-js {
-  width: 500px; }
+  width: 75%; }
 
 .parrafo-js {
   font-family: 'Raleway', sans-serif;
@@ -203,6 +208,8 @@ nav {
   padding-top: 5%;
   padding-bottom: 5%;
   margin-left: 0; }
+  .padding-imagen h2 {
+    font-size: 40px; }
 
 .box-bordes {
   font-family: "Verdana", Geneva, Tahoma, sans-serif;
@@ -212,6 +219,8 @@ nav {
   margin-left: 25px;
   width: 300px;
   transition: all 0.5s; }
+  .box-bordes h2 {
+    font-size: 25px; }
 
 .box-bordes:hover {
   transform: scale(1.05, 1.05);
@@ -247,7 +256,7 @@ nav {
   font-family: "Verdana", Geneva, Tahoma, sans-serif; }
   .descripcion h2 {
     color: #000;
-    font-size: 45px;
+    font-size: 35px;
     font-weight: bold;
     letter-spacing: 5px;
     text-align: center;
@@ -292,7 +301,9 @@ footer .footer__p {
     font-family: 'Raleway', sans-serif; }
 
 .texto-contacto {
-  font-family: 'Raleway', sans-serif; }
+  font-family: 'Raleway', sans-serif;
+  font-size: 40px;
+  padding-top: 20%; }
 
 textarea {
   border-radius: 10px;
