--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -66,7 +66,7 @@ $color-degradee: linear-gradient(115deg, #ffffff 0, #ffffff 8.33%, #ffffff 16.67
 }
 
 .img-js{
-    width: 500px;
+    width: 75%;
 }
 
 .parrafo-js{
