--- a/scss/_servicios.scss
+++ b/scss/_servicios.scss
@@ -55,6 +55,10 @@ $azul-logo: rgb(0, 31, 108);
     padding-top: 5%;
     padding-bottom: 5%;
     margin-left: 0;
+
+    h2{
+        font-size: 40px;
+    }
 }
 
 .box-bordes{
@@ -65,6 +69,10 @@ $azul-logo: rgb(0, 31, 108);
     margin-left: 25px;
     width: 300px;
     transition: all 0.5s;
+
+    h2{
+        font-size: 25px;
+    }
 }
 
 
@@ -116,7 +124,7 @@ $azul-logo: rgb(0, 31, 108);
 
     h2{
         color: $color-negro;
-        font-size: 45px;
+        font-size: 35px;
         font-weight: bold;
         letter-spacing: 5px;
         text-align: center;
