--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -11,32 +11,51 @@ $color-degradee: linear-gradient(115deg, #ffffff 0, #ffffff 8.33%, #ffffff 16.67
 
 // SECCIÓN NOSOTROS
 
-.videoNosotros{
-    @include size(100%, 550px);
+.baner-nosotros{
+    background-image: url(../assets/img/baner-nosotros.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 500px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     position: relative;
-    overflow: hidden;
 
-    .videoNosotros__videoUno{
-        width: 100%;
+    h2, h3, p{
+        color: #fff;
+        position: relative;
+        font-family: 'Raleway', sans-serif;
+    }
+    h2{
+        font-size: 40px;
+        font-weight: bold;
+        margin-bottom: 20px;
     }
 
-    .videoNosotros__absoluteTexto{
-        position: absolute;
-        @include size(800px, 500px);
-
-        p{
-            font-family: 'Raleway', sans-serif;
-            font-size: 30px;
-        }
+    h3{
+        font-size:30px;
     }
 
-    .videoNosotros__capaNosotros{
-        @include size(100%, 550px);
-        position: absolute;
-        background: rgba(0, 0, 0, 0.274);
+    p{
+        font-size: 20px;
+        padding-top: 20px;
     }
+
 }
 
+.baner-nosotros::before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: rgb(2, 0, 103);
+    opacity: 0.7;
+
+    position: absolute;
+}
 
 .degradee{
     background-image: $color-degradee;
